# mini-gpr

./: .buildinfo  MATHS.md  README.md  genindex.html  index.html  likelihoods.md  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: index.doctree
.doctrees/api/: kernels.doctree  models.doctree  opt.doctree
.doctrees/tutorials/: introduction.doctree  kernels.doctree  model-optimisation.doctree  real-world-use-case.doctree  sparse-approx.doctree
.github/workflows/: tests.yaml
_modules/: index.html
_modules/mini_gpr/: kernels.html  models.html  opt.html  solvers.html
_sources/tutorials/: introduction.ipynb.txt  real-world-use-case.ipynb.txt
api/: kernels.html  models.html  opt.html
docs/: api.rst  conf.py  index.rst  maths.rst
docs/tutorials/: index.rst  introduction.ipynb  kernels.ipynb  model-optimisation.ipynb  sparse-approx.ipynb
examples/: basic-new.ipynb  basic.ipynb  kernels.ipynb
src/mini_gpr/: __init__.py  full.py  kernels.py  models.py  opt.py  selection.py  solvers.py  sparse.py  utils.py  viz.py
tests/: test_kernels.py  test_models.py  test_utils.py
tutorials/: introduction.html  kernels.html  model-optimisation.html  real-world-use-case.html  sparse-approx.html
