[project]
name = "mini-gpr"
version = "0.0.0"
description = "a minimal reference implementation of gaussian process regression in pure numpy"
readme = "README.md"
authors = [
    { name = "John Gardner", email = "gardner.john97+dphil@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "jaxtyping>=0.3.2",
    "numpy>=2.3.0",
    "matplotlib>=3.10.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "notebook>=7.4.3",
    "pytest>=8.0.0",
    "pytest-cov>=6.3.0",
    "ruff>=0.11.13",
    "scikit-learn>=1.7.0",
]

[tool.ruff]
line-length = 80
indent-width = 4
extend-include = ["*.ipynb", "*.pyi", "*.toml"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["SIM300", "E402", "E703", "F722", "UP037", "F821", "B018", "E741"]
fixable = ["ALL"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
omit = [
    "tests/*",
    "test/*",
]
